# pacman

./: .gitignore  .ocamlformat  INSTALL.md  Makefile  README.md  _tags  author.ml  check.sh  checkhours.ml  direction.mli  dune-project  gameState.ml  ghostBehavior.ml  ghostBehavior.mli  ghosts.ml  ghosts.mli  main.ml  map.json  maze.ml  maze.mli  mazeBuilder.ml  mazeBuilder.mli  pacman.ml  pacman.mli  pacman.opam  test.ml
src/: author.mli
src/characters/: characters.ml  dune  ghostBehavior.ml  ghostBehavior.mli  ghosts.ml  ghosts.mli  pacman.ml  pacman.mli
src/components/: components.ml  dune  maze.ml  maze.mli  mazeBuilder.ml  mazeBuilder.mli
src/graphics/: dune  tileDraw.ml  tileDraw.mli
src/gui/: author.ml  author.mli  dune  gameState.ml  gameState.mli  main.ml
src/util/: direction.ml  direction.mli  dune  util.ml
test/: dune  test.ml
test_samples/: sample1.json  sample2.json  sample3.json
